# anthaxia

./: .gitignore  AnthaxiaApp.cpp  CMakeLists.txt  LICENSES  Toolchain-mingw32.cmake  build_prerequisites.py  create_class_files.py  logging.cfg  main.cpp
include/: AnthaxiaApp.h
include/model/: SimulationObjectInterface.h
include/plugins/: ImageLoader.h  Plugin.h  ScriptEngine.h
include/plugins/processor/: MemoryInterface.h  MemoryUpdateInterface.h  ProcessorControl.h  ProcessorControlUpdateInterface.h
include/sigslot/: sigslot.h
model/: CMakeLists.txt  DummyRegister.cpp  DummyRegister.h  ModelControl.cpp  ModelControl.h  Processor.cpp  Processor.h  RegisterBank.h  SimulationObject.cpp  SimulationObject.h  SimulationObjectVisitor.cpp  SimulationObjectVisitor.h  SystemOnChip.cpp  SystemOnChip.h
model/mips/: CMakeLists.txt  MipsModel.cpp  MipsModel.h  Simulator.h
model/simplemodel/: CMakeLists.txt  SimplifiedModel.cpp  SimplifiedModel.h
platform/: DynamicLibrary.h
platform/linux/: DynamicLibrary.cpp
platform/windows/: DynamicLibrary.cpp
plugins/: CMakeLists.txt  PluginManager.cpp  PluginManager.h  PsBinLoader.cpp  PsBinLoader.h
plugins/elfloader/: ELFIImpl.cpp  ELFISection.cpp  PsElfLoader.cpp  PsElfLoader.h
plugins/pythonshell/: CMakeLists.txt  PythonShell.cpp  PythonShell.h  pyservicesystem.c  pyservicesystem.h  pyservicesystem.py
qt/: CMakeLists.txt  PsMainWindow.cpp  PsMainWindow.h  PsMemView.cpp  PsMemView.h  PsMemoryObserver.cpp  PsMemoryObserver.h  PsModelControl.cpp  PsModelControl.h  PsModelTreeView.cpp  PsPluginInfoDlg.cpp  PsPluginInfoDlg.h  PsProcChooserDlg.cpp  PsProcChooserDlg.h  PsRegisterView.cpp  PsRegisterView.h  PsSimulationModel.cpp  PsSimulationModel.h  PsUI.cpp  PsUI.h
qt/console/: interceptor.cpp  interceptor.h  pymemoryproxy.cpp  pymemoryproxy.h  qpluginconsole.cpp  qpluginconsole.h
qt/test/: CMakeLists.txt  TestSimulationModel.cpp  TestSimulationModel.h  main.cpp
servicesystem/: CMakeLists.txt  ModelControlService.cpp  ModelControlService.h  marshalling.c  marshalling.h  serviceprovider.h  servicesystem.cpp  servicesystem.h
servicesystem/generator/: classfile.cheetah  modelservice.ssi  ssi.py  tpg.py
servicesystem/test/: AdderService.cpp  AdderService.hpp  CMakeLists.txt  TestMarshalling.cpp  TestServiceSystem.cpp  test_marshalling.cpp  test_marshalling.h  test_servicesystem.cpp  test_servicesystem.h
tools/: CMakeLists.txt
tools/Logging/: Logging.h
tools/Settings/: Settings.cpp  Settings.h
tools/buildtools/: CMakeLists.txt  search_static_plugins.cpp
